--- a/src/scss/_deco.scss
+++ b/src/scss/_deco.scss
@@ -1,114 +1,114 @@
 #deco {
   position: absolute;
   width: 100%;
-  height: 30vh;
+  height: 30vw;
   z-index: 200;
-  top: -24vh;
+  top: -24vw;
   display: flex;
   justify-content: center;
   align-items: center;
   @media screen and (max-width: 768px){
-    height: 15vh;
-    top: -12vh;
+    height: 15vw;
+    top: -12vw;
   }
   .deco_circle {
     position: relative;
-    width: 30vh;
-    height: 30vh;
-    border: 0.5vh solid white;
+    width: 30vw;
+    height: 30vw;
+    border: 0.5vw solid white;
     border-radius: 100%;
     box-shadow: 0px 8px 16px -6px rgba(0,0,0,0.6);
     display: flex;
     justify-content: center;
-    margin: 0 -4vh;
+    margin: 0 -4vw;
     @media screen and (max-width: 768px){
-      width: 15vh;
-      height: 15vh;
-      margin: 0 -2vh;
+      width: 15vw;
+      height: 15vw;
+      margin: 0 -2vw;
     }
     &::before {
       position: absolute;
       content: "";
       display: block;
-      top: 30vh;
-      width: 0.5vh;
-      height: 8vh;
+      top: 30vw;
+      width: 0.5vw;
+      height: 8vw;
       background: white;
       border-right: 1px solid black;
       @media screen and (max-width: 768px){
-        top: 15vh;
-        width: 0.25vh;
-        height: 4vh;
+        top: 15vw;
+        width: 0.25vw;
+        height: 4vw;
       }
     }
     &_sock {
       position: absolute;
-      width: 10vh;
-      height: 14vh;
-      top: 36vh;
+      width: 10vw;
+      height: 14vw;
+      top: 36vw;
       transform: rotate(-15deg);
       @media screen and (max-width: 768px){
-        top: 18vh;
-        width: 5vh;
-        height: 7vh;
+        top: 18vw;
+        width: 5vw;
+        height: 7vw;
       }
       &_white {
         position: absolute;
-        width: 8vh;
-        height: 3vh;
+        width: 8vw;
+        height: 3vw;
         background: white;
         right: 0;
         @media screen and (max-width: 768px){
-          width: 4vh;
-          height: 1.5vh;
+          width: 4vw;
+          height: 1.5vw;
         }
       }
       &_red {
         position: absolute;
-        width: 7vh;
-        height: 11vh;
+        width: 7vw;
+        height: 11vw;
         background: red;
-        right: 0.5vh;
-        top: 3vh;
+        right: 0.5vw;
+        top: 3vw;
         border-radius: 0 0 20% 0;
         box-shadow: 0px 8px 16px -6px rgba(0,0,0,0.6);
         @media screen and (max-width: 768px){
-          width: 3.5vh;
-          height: 5.5vh;
-          right: 0.25vh;
-          top: 1.5vh;
+          width: 3.5vw;
+          height: 5.5vw;
+          right: 0.25vw;
+          top: 1.5vw;
         }
         &::before {
           border-right: none;
           content: "";
           position: absolute;
           display: block;
-          left: -2.5vh;
+          left: -2.5vw;
           bottom: 0;
           background: red;
-          width: 2.6vh;
-          height: 5vh;
+          width: 2.6vw;
+          height: 5vw;
           border-radius: 100% 0 0 100%;
           @media screen and (max-width: 768px){
-            left: -1.25vh;
-            width: 1.3vh;
-            height: 2.5vh;
+            left: -1.25vw;
+            width: 1.3vw;
+            height: 2.5vw;
           }
         }
       }
     }
     &_ornament {
       position: absolute;
-      width: 14vh;
-      height: 14vh;
-      top: 36vh;
+      width: 14vw;
+      height: 14vw;
+      top: 36vw;
       background: #00A5FF;
       border-radius: 100%;
       box-shadow: 0px 8px 16px -6px rgba(0,0,0,0.6);
       @media screen and (max-width: 768px){
-        width: 7vh;
-        height: 7vh;
-        top: 18vh;
+        width: 7vw;
+        height: 7vw;
+        top: 18vw;
       }
       &.ornament_yellow {
         background: #F2FF49;
