--- a/src/scss/_deco.scss
+++ b/src/scss/_deco.scss
@@ -1,115 +1,79 @@
 #deco {
   position: absolute;
   width: 100%;
-  height: 30vw;
+  height: 15vw;
   z-index: 200;
-  top: -24vw;
+  top: -12vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  @media screen and (max-width: 768px){
-    height: 15vw;
-    top: -12vw;
-  }
   .deco_circle {
     position: relative;
-    width: 30vw;
-    height: 30vw;
-    border: 0.5vw solid white;
+    width: 15vw;
+    height: 15vw;
+    border: 0.25vw solid white;
     border-radius: 100%;
     box-shadow: 0px 8px 16px -6px rgba(0,0,0,0.6);
     display: flex;
     justify-content: center;
-    margin: 0 -4vw;
-    @media screen and (max-width: 768px){
-      width: 15vw;
-      height: 15vw;
-      margin: 0 -2vw;
-    }
+    margin: 0 -2vw;
     &::before {
       position: absolute;
       content: "";
       display: block;
-      top: 30vw;
-      width: 0.5vw;
-      height: 8vw;
+      top: 15vw;
+      width: 0.25;
+      height: 4vw;
       background: white;
       border-right: 1px solid black;
-      @media screen and (max-width: 768px){
-        top: 15vw;
-        width: 0.25vw;
-        height: 4vw;
-      }
     }
     &_sock {
       position: absolute;
-      width: 10vw;
-      height: 14vw;
-      top: 36vw;
+      top: 18vw;
+      width: 5vw;
+      height: 7vw;
       transform: rotate(-15deg);
       @media screen and (max-width: 768px){
-        top: 18vw;
-        width: 5vw;
-        height: 7vw;
+
       }
       &_white {
         position: absolute;
-        width: 8vw;
-        height: 3vw;
+        width: 4vw;
+        height: 1.5vw;
         background: white;
         right: 0;
-        @media screen and (max-width: 768px){
-          width: 4vw;
-          height: 1.5vw;
-        }
       }
       &_red {
         position: absolute;
-        width: 7vw;
-        height: 11vw;
+        width: 3.5vw;
+        height: 5.5vw;
+        right: 0.25vw;
+        top: 1.5vw;
         background: red;
-        right: 0.5vw;
-        top: 3vw;
         border-radius: 0 0 20% 0;
         box-shadow: 0px 8px 16px -6px rgba(0,0,0,0.6);
-        @media screen and (max-width: 768px){
-          width: 3.5vw;
-          height: 5.5vw;
-          right: 0.25vw;
-          top: 1.5vw;
-        }
         &::before {
           border-right: none;
           content: "";
           position: absolute;
           display: block;
-          left: -2.5vw;
           bottom: 0;
           background: red;
-          width: 2.6vw;
-          height: 5vw;
+          left: -1.25vw;
+          width: 1.3vw;
+          height: 2.5vw;
           border-radius: 100% 0 0 100%;
-          @media screen and (max-width: 768px){
-            left: -1.25vw;
-            width: 1.3vw;
-            height: 2.5vw;
-          }
         }
       }
     }
     &_ornament {
       position: absolute;
-      width: 14vw;
-      height: 14vw;
-      top: 36vw;
+      width: 7vw;
+      height: 7vw;
+      top: 18vw;
       background: #00A5FF;
       border-radius: 100%;
       box-shadow: 0px 8px 16px -6px rgba(0,0,0,0.6);
-      @media screen and (max-width: 768px){
-        width: 7vw;
-        height: 7vw;
-        top: 18vw;
-      }
       &.ornament_yellow {
         background: #F2FF49;
       }
