--- a/src/scss/_deco.scss
+++ b/src/scss/_deco.scss
@@ -22,7 +22,7 @@
       content: "";
       display: block;
       top: 15vw;
-      width: 0.25;
+      width: 0.25vw;
       height: 4vw;
       background: white;
       border-right: 1px solid black;
