--- a/src/scss/_scene.scss
+++ b/src/scss/_scene.scss
@@ -12,8 +12,9 @@
   .scene_candyColorWrap {
     position: relative;
     margin: auto;
-    width: 80vw;
-    height: 80vh;
+    max-width: 90vh;
+    width: 90%;
+    height: 90%;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -21,8 +22,8 @@
     border: 4px solid black;
     .scene_candyColor {
       position: absolute;
-      width: 200vw;
-      height: 200vh;
+      width: 200%;
+      height: 200%;
       display: flex;
       justify-content: flex-start;
       transform: rotate(45deg);
@@ -42,8 +43,8 @@
     img {
       position: relative;
       z-index: 1;
-      width: 70vw;
-      height: 70vh;
+      width: 90%;
+      height: 90%;
       object-fit: cover;
       vertical-align: bottom;
     }
@@ -51,9 +52,9 @@
 
   #snow {
     position: absolute;
-    left: 5vw;
-    width: 70vw;
-    height: 70vh;
+    left: 5%;
+    width: 90%;
+    height: 90%;
     overflow: hidden;
   }
 }
